correctly uncovers cells

--- a/minesweeper.css
+++ b/minesweeper.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #bbb;
+}
+
 #header {
   width: 50%;
   height: 50px;
